基于SpringMVC工程配置

--- a/html/WEB-INF/web.xml
+++ b/html/WEB-INF/web.xml
@@ -7,32 +7,29 @@
 	<!-- 声明WEB应用的描述信息 -->
 	<description>Bootstrap,Spring</description>
 	
-	<!-- Spring容器上下文参数配置 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext.xml</param-value>
+		<param-value>classpath:ApplicationContext.xml</param-value>
 	</context-param>
+	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
-	<!-- Spring MVC 前段控制器  Start -->
 	<servlet>
 		<servlet-name>EnjoySportFrontController</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<init-param>
-			<param-name>contextConfigLocation</param-name>
-            <param-value></param-value>
-		</init-param>
+		<init-param>  
+        <param-name>contextConfigLocation</param-name>  
+        <param-value>classpath:EnjoySportSpringMVC.xml</param-value>  
+    </init-param>  
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>EnjoySportFrontController</servlet-name>
 		<url-pattern>/enjoysport/*</url-pattern>
 	</servlet-mapping>
-	<!-- Spring MVC 前段控制器  End -->
-	
-	
+
 	<!-- 欢迎界面 -->
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
