--- a/html/WEB-INF/web.xml
+++ b/html/WEB-INF/web.xml
@@ -13,14 +13,14 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>  
         	<param-name>contextConfigLocation</param-name>
-        	<param-value>classpath:SpringMVCHelloWorld.xml</param-value>  
+        	<param-value>classpath:applicationContext.xml</param-value>  
     	</init-param>  
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>EnjoySportFrontController</servlet-name>
 		<!-- 至拦截enjoysport下*.do的请求 -->
-		<url-pattern>/hello</url-pattern>
+		<url-pattern>/enjoysport/*.guava</url-pattern>
 	</servlet-mapping>
 	<!-- 使用SpringMVC配置逻辑 -->
 	
