--- a/html/WEB-INF/web.xml
+++ b/html/WEB-INF/web.xml
@@ -6,7 +6,21 @@
 	<display-name>enjoysport</display-name>
 	<!-- 声明WEB应用的描述信息 -->
 	<description>Bootstrap,Spring</description>
-	
+
+	<!-- 添加Spring过滤器,解决POST时乱码问题，但GET方式需要自己手工处理 -->
+	<filter>
+		<filter-name>Set Character Encoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>Set Character Encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping> 
+    
 	<!-- 使用SpringMVC配置逻辑 -->
 	<servlet>
 		<servlet-name>EnjoySportFrontController</servlet-name>
@@ -19,8 +33,8 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>EnjoySportFrontController</servlet-name>
-		<!-- 至拦截enjoysport下*.do的请求 -->
-		<url-pattern>/enjoysport/*.guava</url-pattern>
+		<!-- 只拦截*.guava的请求 -->
+		<url-pattern>*.guava</url-pattern>
 	</servlet-mapping>
 	<!-- 使用SpringMVC配置逻辑 -->
 	
