自定义格式化函数

--- a/config/beetl.properties
+++ b/config/beetl.properties
@@ -7,4 +7,6 @@ RESOURCE.autouCheck= true
 #实现Function接口自定义方法
 FN.sayHello=com.example.beetl.functions.SayHelloFunction
 #使用普通的Java类自定义方法
-FNP.guavaBeetlUtil = com.example.beetl.utils.GuavaBeetlUtil
+FNP.guavaBeetlUtil=com.example.beetl.utils.GuavaBeetlUtil
+#自定义时间格式化函数
+FT.guavaBeetlDateFormat=com.example.beetl.formats.GuavaBeetlDateFormat
