自定义标签学习

--- a/config/beetl.properties
+++ b/config/beetl.properties
@@ -10,3 +10,5 @@ FN.sayHello=com.example.beetl.functions.SayHelloFunction
 FNP.guavaBeetlUtil=com.example.beetl.utils.GuavaBeetlUtil
 #自定义时间格式化函数
 FT.guavaBeetlDateFormat=com.example.beetl.formats.GuavaBeetlDateFormat
+#自定义标签
+TAG.guavaTestTag=com.example.beetl.tags.GuavaTestTag
