自动定义标签

--- a/config/beetl.properties
+++ b/config/beetl.properties
@@ -12,3 +12,4 @@ FNP.guavaBeetlUtil=com.example.beetl.utils.GuavaBeetlUtil
 FT.guavaBeetlDateFormat=com.example.beetl.formats.GuavaBeetlDateFormat
 #自定义标签
 TAG.guavaTestTag=com.example.beetl.tags.GuavaTestTag
+TAG.GuavaSimpleTableTag=com.guava.beetl.tags.GuavaSimpleTableTag
