--- a/config/db.properties
+++ b/config/db.properties
@@ -1,4 +1,4 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/coolguava?useUnicode=true&amp;characterEncoding=utf8
+db.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf8
 db.username=root
 db.password=coolguava0792
