--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,6 +1,6 @@
 #配置根Logger
 #log4j.rootLogger=[level],appenderName1,appenderName2 
-log4j.rootLogger=INFO,console
+log4j.rootLogger=DEBUG,console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=[%c] - %m%n
