Spring jdbc beetl代码生成工具

--- a/src/com/guava/codeautogenerator/CodeAutoGeneratorDefault.properties
+++ b/src/com/guava/codeautogenerator/CodeAutoGeneratorDefault.properties
@@ -1,5 +1,6 @@
+CodeAutoGenerator.IsConcurrence=false
 CodeAutoGenerator.CodeStyle=SpringJdbc
 CodeAutoGenerator.TemplateEngine=com.guava.codeautogenerator.springjdbc.templateengine.BeetlTemplateEngine
 CodeAutoGenerator.CodeModuleName=com.guava.codeautogenerator.testing
-CodeAutoGenerator.CodeAutoGeneratorMapping=com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcControllerCodeAutoGeneratorMapping,\
-						 				   com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcServiceCodeAutoGeneratorMapping
+CodeAutoGenerator.CodeAutoGeneratorMapping=com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcBeetlControllerCodeAutoGeneratorMapping,\
+						 				   com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcBeetlServiceCodeAutoGeneratorMapping
