完善代码自动自动生成工具

--- a/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
+++ b/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
@@ -1,3 +1,6 @@
+CodeAutoGenerator.FileSuffix=.java
+CodeAutoGenerator.TheEndFileName=tempDir.zip
+CodeAutoGenerator.BufferSize=1024
 CodeAutoGenerator.IsConcurrence=false
 CodeAutoGenerator.CodeStyle=SpringJdbc
 CodeAutoGenerator.TemplateEngine=com.guava.codeautogenerator.springjdbc.templateengine.BeetlTemplateEngine
