代码自动生成工具V1.0版本

--- a/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
+++ b/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
@@ -1,5 +1,5 @@
 CodeAutoGenerator.FileSuffix=.java
-CodeAutoGenerator.TheEndFileName=tempDir.zip
+CodeAutoGenerator.TheEndFileName=tempFile.zip
 CodeAutoGenerator.BufferSize=1024
 CodeAutoGenerator.IsConcurrence=false
 CodeAutoGenerator.CodeStyle=SpringJdbc
