增加多线程并发代码生成

--- a/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
+++ b/src/com/guava/codeautogenerator/core/CodeAutoGeneratorDefault.properties
@@ -2,8 +2,9 @@ CodeAutoGenerator.FileSuffix=.java
 CodeAutoGenerator.TheEndFileName=tempFile.zip
 CodeAutoGenerator.BufferSize=1024
 CodeAutoGenerator.IsConcurrence=false
+CodeAutoGenerator.DefaultThreads=5
 CodeAutoGenerator.CodeStyle=SpringJdbc
-CodeAutoGenerator.TemplateEngine=com.guava.codeautogenerator.springjdbc.templateengine.BeetlTemplateEngine
+CodeAutoGenerator.TemplateEngine=com.guava.codeautogenerator.core.templateengine.BeetlTemplateEngine
 CodeAutoGenerator.CodeModuleName=com.guava.codeautogenerator.testing
 CodeAutoGenerator.CodeAutoGeneratorMapping=com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcBeetlControllerCodeAutoGeneratorMapping,\
 						 				   com.guava.codeautogenerator.springjdbc.mapping.SpringJdbcBeetlServiceCodeAutoGeneratorMapping
