--- a/config/beetl.properties
+++ b/config/beetl.properties
@@ -1,14 +1,21 @@
 #资源配置，resource后的属性只限于特定ResourceLoader
-RESOURCE_LOADER=org.beetl.core.resource.ClasspathResourceLoader
+RESOURCE_LOADER=org.beetl.core.resource.FileResourceLoader
 #classpath根路径
 RESOURCE.root=/
 #是否检测文件变化
 RESOURCE.autouCheck=true
-#实现Function接口自定义方法
 
-#使用普通的Java类自定义方法
+#自定义内置的方法
+FN.beetlCustomFunction=com.example.beetl.test.BeetlCustomFunction
+#自定义工具包
+FNP.beetlCustomUtilFunction=com.example.beetl.test.BeetlCustomUtilFunction
 
-#自定义时间格式化函数
+#自定义格式化函数
+FT.beetlCustomFormat=com.example.beetl.test.BeetlCustomFormat
 
 #自定义标签
 TAG.GuavaSimpleTableTag=com.guava.beetl.tags.GuavaSimpleTableTag
+
+#代码生成工具自定义标签
+#G-->Guava
+#AG-->AutoGenerator
