--- a/config/db.properties
+++ b/config/db.properties
@@ -1,4 +1,4 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://192.168.1.111:3306/lily?useUnicode=true&amp;characterEncoding=utf8
-db.username=coolguava
-db.password=coolguava0792
+db.url=jdbc:mysql://192.168.1.108:3306/lily?useUnicode=true&amp;characterEncoding=utf8
+db.username=root
+db.password=coolguava#A0712
